fix bug position for bubble on mobile version

--- a/src/main/webapp/assets/css/bubble.css
+++ b/src/main/webapp/assets/css/bubble.css
@@ -187,3 +187,6 @@
     color: red;
     margin: auto;
 }
+.small{
+    z-index: 5 !important;
+}
